Refactor Minimax.java